#13 - 13-parametrized-unit-tests  - changed trim.isEmpty() to isBlank in GoogleApiResponseValidator